ISSUE:  Redmine #670  PURPOSE:  Transaaction Styles and Accessibility Checking  DESCRIPTION:   Wave web aim accesibility checker -- contrast fix.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -89,7 +89,7 @@ h5, .h5 {
 h6, .h6 {
 	font-size: .75rem
 }
-
+.btn-link,.helpText {color: #036ee0 !important;}
 #resultLink a {padding: .15em .25em; outline:0;}
 #resultLink a.hover, #resultLink a:hover {padding: .15em .25em; outline:0;}
 #resultLink a.focus, #resultLink a:focus {padding:.15em .25em;	outline: 0;	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);}
